add radio buttons v0.2

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,16 @@
       <br />
       <label for="code">Short Name</label>
       <input type="text" name="code" value="" />
+      <br />
 
+      <div>How do you want your choice displayed?</div>
+      <br />
+      <input type="radio" id="bold" name="choice" value="BOLD">
+      <label for="bold">Bold Text</label>
+      <input type="radio" id="italic" name="choice2" value="ITALIC">
+      <label for="italic">Italic Text</label>
+      <input type="radio" id="regular" name="choice3" value="REGULAR">
+      <label for="regular">Regular Text</label>
 
       <br />
       <input type="submit" value="Shorten" required />
